cabal-version:      2.4
name:               haskell-ui
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             romes
maintainer:         rodrigo.m.mesquita@gmail.com

-- A copyright notice.
-- copyright:
category:           Web
extra-source-files: CHANGELOG.md

library
    exposed-modules:  UI, UI.Utils, UI.Extended, UI.Icons, UI.Theme, UI.Class, UI.Input, UI.Text, UI.Layout, UI.View, UI.Router, UI.Lazy

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14.3.0,
                      containers,
                      reflex,
                      reflex-dom,
                      text,
                      file-embed,
                      time,
                      random,
                      jsaddle
                      -- recursion-schemes,
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall
