cabal-version:      2.4
name:               haskell-ui-demo
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             romes
maintainer:         rodrigo.m.mesquita@gmail.com

-- A copyright notice.
-- copyright:
category:           Web
extra-source-files: CHANGELOG.md

executable main
    default-language: Haskell2010
    main-is: Main.hs
    build-depends:    base ^>=4.14.3.0,
                      haskell-ui,
                      cob,
                      cob-ui,
                      text
    ghc-options: -threaded
